# ShanHaiJing

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  prd.md
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  decorators.py  deepseek_client.py  errors.py  exceptions.py
backend/app/api/: __init__.py  baselines.py  data.py  hermes.py  plans.py  records.py  stats.py
backend/app/hermes_client/: __init__.py  retry.py  skills.py
backend/app/models/: __init__.py
backend/app/services/: exporter.py  quota_tracker.py  scheduler.py
backend/docs/: api_error_handling.md
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: baselines.js  client.js  data.js  hermes.js  plans.js  records.js  stats.js
frontend/src/components/: Heatmap.vue  HermesPanel.vue  KanbanBoard.vue  QuotaPanel.vue  StatsCharts.vue  StyleReview.vue
frontend/src/router/: index.js
frontend/src/stores/: dashboard.js  records.js
frontend/src/styles/: responsive.css
frontend/src/views/: Baselines.vue  Dashboard.vue  DataManagement.vue  Plans.vue  RecordDetail.vue  RecordForm.vue  Records.vue
hermes/: Dockerfile
hermes/skills/: deepseek-prompt-generator.md  style-consistency-checker.md
nginx/: default.conf  ssl.conf
scripts/: backup.sh  setup-ssl.sh
(+4 files in other folders)
